@@ -55,60 +55,60 @@ else (APPLE)
 			endif (MSVC)
 		endif (NOT WIN_ASPELL_DIR)
 	else (WIN32)
-		if (WITH_ENCHANT AND NOT WITH_ASPELL)
-			set (USE_ENCHANT TRUE)
-			set (FORCE_ENGINE TRUE)
-		else (WITH_ENCHANT AND NOT WITH_ASPELL)
+		if (WITH_ASPELL AND NOT WITH_ENCHANT)
 			set (USE_ASPELL TRUE)
-			if (WITH_ASPELL)
-				set (FORCE_ENGINE TRUE)
-			endif (WITH_ASPELL)
-		
+			set (FORCE_ENGINE TRUE)
+		else (WITH_ASPELL AND NOT WITH_ENCHANT)
+			set (USE_ENCHANT TRUE)
 			if (WITH_ENCHANT)
-				message (STATUS "Cannot use both enchant and aspell. Using aspell")
+				set (FORCE_ENGINE TRUE)
 			endif (WITH_ENCHANT)
-		endif (WITH_ENCHANT AND NOT WITH_ASPELL)
 		
-		if (USE_ASPELL)
-			include (FindASPELL)
-		
-			if (NOT ASPELL_FOUND)
-				if (FORCE_ENGINE)
-					message (FATAL_ERROR "aspell not found!")
-				else (FORCE_ENGINE)
-					message (STATUS "aspell not found. Falling back to enchant")
-					set (USE_ASPELL FALSE)
-					set (USE_ENCHANT TRUE)
-				endif (FORCE_ENGINE)
-			endif (NOT ASPELL_FOUND)
-		endif (USE_ASPELL)
+			if (WITH_ASPELL)
+				message (STATUS "Cannot use both enchant and aspell. Using enchant")
+			endif (WITH_ASPELL)
+		endif (WITH_ASPELL AND NOT WITH_ENCHANT)
 		
 		if (USE_ENCHANT)
 			include (FindPkgConfig)
 			pkg_search_module (ENCHANT enchant)
 		
 			if (NOT ENCHANT_FOUND)
-				message (FATAL_ERROR "enchant not found!")
+				if (FORCE_ENGINE)
+					message (SEND_ERROR "enchant not found!")
+				else (FORCE_ENGINE)
+					message (STATUS "enchant not found. Falling back to aspell")
+					set (USE_ENCHANT FALSE)
+					set (USE_ASPELL TRUE)
+				endif (FORCE_ENGINE)
 			endif (NOT ENCHANT_FOUND)
 		endif (USE_ENCHANT)
+		
+		if (USE_ASPELL)
+			include (FindASPELL)
+		
+			if (NOT ASPELL_FOUND)
+				message (SEND_ERROR "aspell not found!")
+			endif (NOT ASPELL_FOUND)
+		endif (USE_ASPELL)
 	endif (WIN32)
 	
-	if (USE_ASPELL)
-		message (STATUS "Using aspell as backend. To force enchant use -DWITH_ENCHANT=ON")
-		add_definitions (-DHAVE_ASPELL)
-	
-		set (LIBRARIES ${ASPELL_LIBRARIES})
-		link_directories (${ASPELL_LIBRARY_DIR})
-		include_directories (${ASPELL_INCLUDE_DIR})
-	else (USE_ASPELL)
-		message (STATUS "Using enchant as backend")
+	if (USE_ENCHANT)
+		message (STATUS "Using enchant as backend. To force aspell use -DWITH_ASPELL=ON")
 		add_definitions (-DHAVE_ENCHANT)
 	
 		set (LIBRARIES ${ENCHANT_LIBRARIES})
 		link_directories (${ENCHANT_LIBRARY_DIRS})
 		include_directories (${ENCHANT_INCLUDE_DIRS})
 		add_definitions (${ENCHANT_DEFINITIONS})
-	endif (USE_ASPELL)
+	else (USE_ENCHANT)
+		message (STATUS "Using aspell as backend")
+		add_definitions (-DHAVE_ASPELL)
+	
+		set (LIBRARIES ${ASPELL_LIBRARIES})
+		link_directories (${ASPELL_LIBRARY_DIR})
+		include_directories (${ASPELL_INCLUDE_DIR})
+	endif (USE_ENCHANT)
 endif (APPLE)
 
 kadu_plugin (spellchecker
